# rtype

./: .clang-format  .clang-tidy  .claudeignore  .cppcheck-suppressions  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  build.sh  clean.sh  copy_dlls.cmake  coverage_report.py  logs  newline.sh  sonar-project.properties  vcpkg.json
client/: CMakeLists.txt  main.cpp  main_with_login.cpp
client/Audio/: ISoundEffectService.hpp  SoundEffectManager.cpp  SoundEffectManager.hpp
client/Client/: Client.cpp  Client.hpp
client/Core/: ClientGameRules.hpp
client/Core/EventBus/: EventBus.cpp  EventBus.hpp
client/Core/GameLoop/: GameLoop.cpp  GameLoop.hpp
client/Events/: IEvent.hpp  UIEvent.hpp
client/Events/Event/: Event.cpp  Event.hpp
client/Events/InputEvent/: InputEvent.cpp  InputEvent.hpp
client/Events/NetworkEvent/: NetworkEvent.cpp  NetworkEvent.hpp
client/Graphics/: IGraphics.hpp
client/Graphics/Interfaces/: IGraphics.hpp
client/Graphics/Raylib/: Raylib.cpp  Raylib.hpp
client/Graphics/RaylibGraphics/: RaylibGraphics.cpp  RaylibGraphics.hpp
client/Input/: InputBuffer.cpp  InputBuffer.hpp  KeyBindings.cpp  KeyBindings.hpp
client/Menu/: AccessibilityMenu.cpp  AccessibilityMenu.hpp  AddServerMenu.cpp  AddServerMenu.hpp  BaseMenu.cpp  BaseMenu.hpp  ConfirmQuitMenu.cpp  ConfirmQuitMenu.hpp  ConnectionMenu.cpp  ConnectionMenu.hpp  CreateRoomMenu.cpp  CreateRoomMenu.hpp  DefeatMenu.cpp  DefeatMenu.hpp  KeyBindingsMenu.cpp  KeyBindingsMenu.hpp  LoginMenu.cpp  LoginMenu.hpp  MainMenu.cpp  MainMenu.hpp  RoomListMenu.cpp  RoomListMenu.hpp  ServerListMenu.cpp  ServerListMenu.hpp  SettingsMenu.cpp  SettingsMenu.hpp  VictoryMenu.cpp  VictoryMenu.hpp  WaitingRoomMenu.cpp  WaitingRoomMenu.hpp
client/Network/: Replicator.cpp  Replicator.hpp
client/Rendering/: EntityRenderer.cpp  EntityRenderer.hpp  Rendering.cpp  Rendering.hpp
client/Settings/: AccessibilitySettings.hpp
client/UI/: ChatWidget.cpp  ChatWidget.hpp  IButton.hpp  IMenu.hpp  ISlider.hpp  ITextInput.hpp  IUIFactory.hpp  LoginScreen.cpp  LoginScreen.hpp  MenuUI.cpp  MenuUI.hpp  TextUtils.hpp
client/UI/Raylib/: RaylibButton.cpp  RaylibButton.hpp  RaylibMenu.cpp  RaylibMenu.hpp  RaylibSlider.cpp  RaylibSlider.hpp  RaylibTextInput.cpp  RaylibTextInput.hpp  RaylibUIFactory.cpp  RaylibUIFactory.hpp
client/include/: Client.hpp  IGraphics.hpp
client/src/: Client.cpp  main.cpp
common/Networking/: CMakeLists.txt  IAddress.hpp  IHost.hpp  IPacket.hpp  IPeer.hpp  NetworkFactory.cpp  NetworkFactory.hpp  README.md
common/Networking/Enet/: ENetAddress.cpp  ENetAddress.hpp  ENetHost.cpp  ENetHost.hpp  ENetPacket.cpp  ENetPacket.hpp  ENetPeer.cpp  ENetPeer.hpp
common/Security/: Argon2PasswordHasher.cpp  Argon2PasswordHasher.hpp  CMakeLists.txt  IPasswordHasher.hpp
common/Serialization/: CMakeLists.txt  GameMessages.hpp  GameruleKeys.hpp  ISerializer.hpp  SerializerFactory.cpp  SerializerFactory.hpp
common/Serialization/Capnp/: CapnpBuilderMessage.hpp  CapnpMessage.hpp  CapnpNetworkBus.cpp  CapnpNetworkBus.hpp  CapnpSerializer.cpp  CapnpUtils.hpp  ConnectionMessages.hpp  NetworkMessages.hpp
common/Serialization/schemas/: c2s_messages.capnp  connection.capnp  s2c_messages.capnp  shared_types.capnp
common/Threading/: CMakeLists.txt  ThreadSafeQueue.hpp
server/: CMakeLists.txt  main.cpp
server/Commands/: CommandContext.hpp  CommandHandler.cpp  CommandHandler.hpp  HelpCommand.cpp  HelpCommand.hpp  ICommand.hpp  KickCommand.cpp  KickCommand.hpp  ListCommand.cpp  ListCommand.hpp
server/Core/Clock/: Clock.cpp  Clock.hpp  FrameTimer.hpp
server/Core/EventBus/: EventBus.cpp  EventBus.hpp  IEventBus.hpp
server/Core/ServerLoop/: DeterministicGameLoop.cpp  DeterministicGameLoop.hpp  IServerLoop.hpp  ServerLoop.cpp  ServerLoop.hpp
server/Core/ThreadPool/: IThreadPool.hpp  ThreadPool.cpp  ThreadPool.hpp
server/Events/: IEvent.hpp
server/Events/Core/: CollisionEvent.hpp  EntityCreatedEvent.hpp  EntityDestroyedEvent.hpp
server/Events/GameEvent/: GameEndedEvent.hpp  GameEvent.cpp  GameEvent.hpp  GameStartedEvent.hpp  PlayerJoinedEvent.hpp  PlayerLeftEvent.hpp  ProjectileCreatedEvent.hpp
server/Events/NetworkEvent/: NetworkEvent.cpp  NetworkEvent.hpp
server/Game/: GameRules.hpp
server/Game/Logic/: GameLogic.cpp  GameLogic.hpp  GameStateSerializer.cpp  GameStateSerializer.hpp  IGameLogic.hpp
server/Game/Prefabs/: PrefabFactory.cpp  PrefabFactory.hpp
server/Game/Rules/: GameRules.hpp  GameruleBroadcaster.hpp
server/Game/StateManager/: GameOverState.hpp  GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  IGameStateManager.hpp  InGameState.hpp  LobbyState.hpp
server/Game/World/: IWorld.hpp  World.cpp  World.hpp  Worldconfig.hpp
server/Network/: ServerNetworkManager.cpp  ServerNetworkManager.hpp
server/Rooms/: IRoom.hpp  Room.cpp  Room.hpp
server/Rooms/Lobby/: Lobby.cpp  Lobby.hpp
server/Rooms/Matchmaking/: IMatchmakingService.hpp  (+2 more)
server/Scripting/: LuaEngine.cpp  LuaEngine.hpp  LuaSystemAdapter.cpp  LuaSystemAdapter.hpp  ROADMAP_LUA.md
server/Server/: Server.cpp  Server.hpp
server/include/: Server.hpp
server/src/: Server.cpp  main.cpp
tests/: CMakeLists.txt
tests/client_tests/: ClientTest.cpp  GameLoopTest.cpp  MenuTests.cpp  UIComponentTests.cpp  UIMenuTests.cpp
tests/ecs_tests/: ComponentTest.cpp  ComponentsTest.cpp  IComponentTest.cpp  RegistryTest.cpp  RegistryTooMuch.cpp  SystemsTest.cpp
tests/networking_tests/: NetworkingTest.cpp
tests/scripting_tests/: LuaEngineTest.cpp  LuaSystemAdapterTest.cpp
tests/serialization_tests/: GameStartTest.cpp  GameStateTest.cpp  PlayerInputTest.cpp  SerializationTest.cpp
tests/server_tests/: AuthenticationTest.cpp  CMakeLists_gamelogic.txt  CoreComponentsTest.cpp  GameLogicExtendedTest.cpp  GameLoopIntegrationTest.cpp  GameLoopTest.cpp  MatchmakingTest.cpp  NetworkSyncTest.cpp  RoomManagerExtendedTest.cpp  RoomTest.cpp  ServerExtendedTest.cpp  ServerIntegrationTest.cpp  ServerTest.cpp  SessionTest.cpp
tests/threading_tests/: ThreadSafeQueueTest.cpp
(+192 files in other folders)
